--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@babel/runtime": "^7.26.7",
     "@dimforge/rapier3d-compat": "^0.14.0",
-    "@hology/core": "^0.0.85",
+    "@hology/arcweave": "^0.0.5",
+    "@hology/core": "^0.0.86",
     "@hology/react": "^0.0.16",
     "@preact/signals-react": "^3.0.1",
     "@types/three": "^0.169.0",
@@ -23,7 +24,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.25.9",
     "@eslint/js": "^9.13.0",
-    "@hology/vite-plugin": "^0.0.1",
+    "@hology/vite-plugin": "^0.0.2",
     "@preact/signals-react-transform": "^0.5.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
