--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@babel/runtime": "^7.26.7",
     "@dimforge/rapier3d-compat": "^0.14.0",
-    "@hology/arcweave": "^0.0.5",
+    "@hology/arcweave": "^0.0.6",
     "@hology/core": "^0.0.88",
     "@hology/react": "^0.0.16",
     "@preact/signals-react": "^3.0.1",
     "@types/three": "^0.169.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rxjs": "^7.8.2",
     "three": "^0.169.0"
   },
   "devDependencies": {
