--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/three": "^0.169.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.3.0",
     "rxjs": "^7.8.2",
     "three": "^0.169.0"
   },
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "sass-embedded": "^1.85.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
