--- a/hology.config.json
+++ b/hology.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lakeside market",
+  "name": "Hologyarcjam Template",
   "staticPath": "public",
   "dataPath": "public/data",
   "shadersPath": "src/shaders",
